Stop footnotes from increasing line spacing
Footnotes caused an issue where they increased the spacing between
then and the line above.
Use a css selector to kill the line spacing and make all the lines
the same height.
Footnotes are in <sup>s with an id like "fnref:one-two-three"

--- a/css/screen.css
+++ b/css/screen.css
@@ -269,6 +269,11 @@ ul.posts {
     margin-bottom: 50px;
   }
 
+  /* Squash line-height inflating footnote */
+  sup[id*='fnref:'] {
+      line-height: 0em;
+  }
+
 .back-home {
   margin-bottom: 20px;
   margin-top: -1em;
